Reorganised layout to ensure correct margins and alignment.

--- a/PortfolioWebsite/Pages/Projects.razor.css
+++ b/PortfolioWebsite/Pages/Projects.razor.css
@@ -8,7 +8,12 @@
     width: 100%;
     max-width: 900px;
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
+    align-self: center;
+    margin: 0 auto;
+    padding: 1rem;
 }
 
 .projects-header {
@@ -46,9 +51,9 @@
 
 .projects-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 425px));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 225px));
     gap: 3rem;
-    padding: 3rem;
+    width: 100%;
 }
 
 @media (max-width: 700px) {
